--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
       <form action="">
         <div class="form-group">
           <label for="name">Name: </label>
-          <input type="text" name="name" id="name" />
+          <input type="text" name="name" id="name" required />
         </div>
 
         <div class="form-group">
           <label for="dob">DOB: </label>
-          <input type="date" name="dob" id="dob" />
+          <input type="date" name="dob" id="dob" required />
         </div>
 
         <div class="form-group">
           <label for="start-date">Start Date: </label>
-          <input type="date" name="start-date" id="start-date" />
+          <input type="date" name="start-date" id="start-date" required />
         </div>
 
         <div class="form-group">
           <label for="end-date">End Date: </label>
-          <input type="date" name="end-date" id="end-date" />
+          <input type="date" name="end-date" id="end-date" required />
         </div>
 
         <div class="form-group">
@@ -38,9 +38,16 @@
             id="upload-file"
             accept="application/pdf,application/msword,
           application/vnd.openxmlformats-officedocument.wordprocessingml.document"
+            required
           />
+        </div>
+
+        <div class="form-group">
+          <button type="submit">Submit</button>
         </div>
       </form>
     </div>
+
+    <script src="./script.js"></script>
   </body>
 </html>
