add download btn

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <form id="form" action="">
+      <form id="form" action="#" method="POST">
         <!-- todo: add required -->
 
         <div class="form-group">
@@ -45,6 +45,7 @@
 
         <div class="form-group">
           <button id="submit-btn" type="submit">Submit</button>
+          <a id="link" download>Download</a>
         </div>
       </form>
     </div>
