--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="form-group">
           <label for="name">Name: </label>
-          <input type="text" name="name" id="name" />
+          <input type="text" name="name" id="name" placeholder="Enter Name" />
         </div>
 
         <div class="form-group">
